@@ -46,14 +46,15 @@ DOTAU='True'
 DOPFELE='False'
 
 # Global Tag for data and MC reprocessing. Contains detector calibration & aliignment. Make sure you get this one right or prepare for error 8009
-GLOBALTAGDATA='FT_53_V6C_AN2::All'
-GLOBALTAGMC='START53_V7F::All'
+GLOBALTAGDATA='GR_R_53_V8::All'
+GLOBALTAGMC='START53_V7::All'
 
 #Skimmer Version, also folder name on dcache
-VERSION=v95
+VERSION=v96
 
 # Your Username on the grid
-USER=tesch
+#For some users this differs from the Aachen Clustername, these users have to set it by hand!
+USER=`whoami`
 
 #~ Special Switches for MC truth Matching, especially for PYTHIA8 and SHERPA generators
 MATCHALL='True' #if true all leptons (including neutrinos) are saved
